--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h4 {
+  margin-bottom: 0;
+}
+
+p {
+  margin: 0;
+}
+
+ul {
+  padding-inline-start: 1rem;
+}
